# serializer version: 1
# name: TestRegressionOutputs.test_rf_regressor_ctree_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.948319 |   0.05185  |  -0.287684 |   -0.0866   |    -0.034557 |  -0.195393 |  -0.36086  |    0.343765 |
      |  2 |            2 | 2.20594 | -0.366948 |  -0.006291 |  -0.503678 |    0.020885 |    -0.003139 |  -0.044191 |  -0.112869 |   -0.212877 |
      |  3 |            3 | 2.20594 |  0.376875 |   0.657434 |  -0.002444 |   -0.006484 |    -0.059767 |   0.826349 |  -0.005228 |    0.160433 |
      |  4 |            4 | 2.20594 |  0.187932 |  -0.120647 |   0.254612 |    0.015121 |    -0.077986 |  -0.193072 |   0.08305  |    0.328312 |
      |  5 |            5 | 2.20594 |  0.339671 |   0.026453 |  -0.227112 |    0.006098 |     0.008067 |   0.137527 |  -0.416485 |    0.259924 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.057147 |   0.056511 |   0.057892 |    0.081205 |     0.048192 |   0.095447 |   0.110833 |    0.07565  |
      |  2 |            2 |      0 | 0.052043 |   0.061648 |   0.061983 |    0.05197  |     0.047134 |   0.047564 |   0.147082 |    0.068782 |
      |  3 |            3 |      0 | 0.052208 |   0.066924 |   0.045199 |    0.066519 |     0.051898 |   0.049494 |   0.101617 |    0.064322 |
      |  4 |            4 |      0 | 0.038229 |   0.051842 |   0.050404 |    0.064145 |     0.048539 |   0.043137 |   0.124024 |    0.083659 |
      |  5 |            5 |      0 | 0.043567 |   0.041053 |   0.059442 |    0.056602 |     0.033751 |   0.046628 |   0.055844 |    0.049585 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.670784 |   0.053594 |  -0.117928 |    0.139035 |    -0.023417 |  -0.270039 |  -0.44211  |   -0.186147 |
      |  2 |            2 | 2.20594 | -0.544962 |  -0.004542 |  -0.419568 |   -0.196432 |     0.027108 |   0.181133 |  -0.225561 |   -0.046283 |
      |  3 |            3 | 2.20594 |  0.293443 |   0.585458 |  -0.060117 |   -0.194981 |     0.068514 |   0.839855 |   0.141759 |    0.273238 |
      |  4 |            4 | 2.20594 |  0.343831 |  -0.069743 |   0.035049 |    0.120263 |    -0.171457 |  -0.116286 |   0.138258 |    0.197407 |
      |  5 |            5 | 2.20594 | -0.36705  |  -0.102798 |  -0.097714 |    0.160553 |     0.133257 |   0.004032 |   0.046089 |    0.357772 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013548 |   0.011591 |   0.011761 |    0.01268  |     0.010949 |   0.009915 |   0.0104   |    0.009045 |
      |  2 |            2 |      0 | 0.020811 |   0.025234 |   0.022839 |    0.020817 |     0.02336  |   0.018689 |   0.021683 |    0.023111 |
      |  3 |            3 |      0 | 0.016483 |   0.017445 |   0.016352 |    0.016742 |     0.014011 |   0.017054 |   0.017876 |    0.01534  |
      |  4 |            4 |      0 | 0.009327 |   0.008607 |   0.008009 |    0.00824  |     0.00843  |   0.008782 |   0.009958 |    0.007449 |
      |  5 |            5 |      0 | 0.019297 |   0.019047 |   0.021022 |    0.01745  |     0.019957 |   0.015976 |   0.020692 |    0.017768 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_causal_ordering
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.27793  |  -0.001288 |  -0.029224 |   -0.000367 |    -0.031044 |  -0.046522 |  -0.119649 |   -0.011776 |
      |  2 |            2 | 2.20594 | -0.538114 |  -0.121814 |  -0.523862 |    0.030419 |    -0.008679 |   0.063537 |  -0.109599 |   -0.020996 |
      |  3 |            3 | 2.20594 | -0.296545 |   0.980538 |   0.677808 |   -0.041094 |    -0.076431 |   0.654617 |   0.016348 |    0.031929 |
      |  4 |            4 | 2.20594 |  0.644793 |  -0.271523 |  -0.030135 |    0.045457 |    -0.004643 |  -0.04137  |   0.043108 |    0.091634 |
      |  5 |            5 | 2.20594 |  0.095625 |  -0.207002 |   0.015375 |    0.040993 |     0.096883 |  -0.071071 |   0.083472 |    0.079869 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.000245 |   0.001081 |   0.001081 |    0.002205 |     0.007511 |   0.003166 |   0.003107 |    0.003742 |
      |  2 |            2 |      0 | 0.000632 |   0.002789 |   0.002789 |    0.005459 |     0.010351 |   0.007401 |   0.006598 |    0.007594 |
      |  3 |            3 |      0 | 0.001925 |   0.0085   |   0.0085   |    0.021102 |     0.027779 |   0.016803 |   0.024167 |    0.023806 |
      |  4 |            4 |      0 | 0.000852 |   0.003763 |   0.003763 |    0.007848 |     0.010306 |   0.010177 |   0.009759 |    0.015112 |
      |  5 |            5 |      0 | 0.001855 |   0.008191 |   0.008191 |    0.023614 |     0.032001 |   0.037669 |   0.022333 |    0.026749 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |         A |         B |         C |
      |---:|-------------:|--------:|----------:|----------:|----------:|
      |  1 |            1 | 2.20594 | -0.594482 | -0.231199 | -0.692116 |
      |  2 |            2 | 2.20594 | -1.25693  | -0.218553 |  0.246372 |
      |  3 |            3 | 2.20594 |  0.957096 |  0.539514 |  0.450559 |
      |  4 |            4 | 2.20594 |  0.212993 | -0.002629 |  0.266958 |
      |  5 |            5 | 2.20594 | -0.477268 |  0.007353 |  0.604058 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.833239 |  -0.00685  |  -0.360575 |    0.004466 |    -0.097876 |  -0.076885 |  -0.076219 |   -0.07062  |
      |  2 |            2 | 2.20594 | -0.818478 |  -0.019085 |  -0.24768  |   -0.078028 |    -0.053456 |  -0.009557 |   0.014487 |   -0.01731  |
      |  3 |            3 | 2.20594 |  0.465205 |   0.592573 |  -0.147692 |   -0.001813 |     0.033868 |   0.847237 |   0.011282 |    0.14651  |
      |  4 |            4 | 2.20594 |  0.273884 |  -0.041331 |   0.178216 |    0.085273 |     0.019923 |  -0.178807 |   0.083692 |    0.056473 |
      |  5 |            5 | 2.20594 | -0.335658 |  -0.061633 |   0.057132 |    0.116002 |     0.148628 |   0.030318 |   0.071498 |    0.107856 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.027692 |   0.034756 |   0.055687 |    0.05152  |     0.06114  |   0.020118 |   0.060273 |    0.057851 |
      |  2 |            2 |      0 | 0.021748 |   0.023264 |   0.028998 |    0.03918  |     0.039984 |   0.016685 |   0.029734 |    0.034596 |
      |  3 |            3 |      0 | 0.026905 |   0.02816  |   0.037607 |    0.031495 |     0.038883 |   0.020356 |   0.040093 |    0.03154  |
      |  4 |            4 |      0 | 0.012883 |   0.023788 |   0.017081 |    0.00958  |     0.020667 |   0.009138 |   0.016122 |    0.012872 |
      |  5 |            5 |      0 | 0.021935 |   0.024848 |   0.041232 |    0.04063  |     0.031812 |   0.01875  |   0.051633 |    0.041347 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |         A |         B |         C |
      |---:|-------------:|--------:|----------:|----------:|----------:|
      |  1 |            1 | 2.20594 | -1.14609  | -0.140303 | -0.231409 |
      |  2 |            2 | 2.20594 | -1.14444  | -0.123672 |  0.03901  |
      |  3 |            3 | 2.20594 |  0.764227 |  0.86848  |  0.314462 |
      |  4 |            4 | 2.20594 |  0.408776 | -0.121427 |  0.189973 |
      |  5 |            5 | 2.20594 | -0.341501 |  0.170574 |  0.30507  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.23375  |  -0.059731 |   0.041117 |    0.009426 |    -0.019265 |  -0.13167  |  -0.093653 |   -0.030274 |
      |  2 |            2 | 2.20594 | -0.860562 |  -0.055512 |  -0.124966 |   -0.020752 |    -0.021058 |  -0.040834 |  -0.087057 |   -0.018367 |
      |  3 |            3 | 2.20594 |  0.081687 |   0.639952 |   0.146611 |   -0.005336 |     0.020234 |   0.936151 |   0.007015 |    0.120855 |
      |  4 |            4 | 2.20594 |  0.713789 |  -0.111394 |  -0.077309 |    0.031956 |     0.005166 |  -0.157705 |   0.069768 |    0.003051 |
      |  5 |            5 | 2.20594 |  0.111248 |  -0.06596  |  -0.035085 |    0.026804 |     0.027163 |   0.077796 |  -0.025934 |    0.018109 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.001512 |   0.00177  |   0.001245 |    0.001445 |     0.001463 |   0.00182  |   0.001903 |    0.001396 |
      |  2 |            2 |      0 | 0.001474 |   0.001732 |   0.002034 |    0.003146 |     0.001905 |   0.002353 |   0.005197 |    0.002644 |
      |  3 |            3 |      0 | 0.004786 |   0.007392 |   0.007026 |    0.007507 |     0.006745 |   0.011104 |   0.010781 |    0.010283 |
      |  4 |            4 |      0 | 0.002512 |   0.003407 |   0.004184 |    0.003589 |     0.002568 |   0.004124 |   0.005036 |    0.005975 |
      |  5 |            5 |      0 | 0.00119  |   0.001194 |   0.001256 |    0.001255 |     0.001981 |   0.000749 |   0.002877 |    0.001523 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.574366 |  -0.044443 |  -0.186411 |    0.030007 |    -0.035762 |  -0.269482 |  -0.268036 |   -0.169305 |
      |  2 |            2 | 2.20594 | -0.692874 |  -0.06756  |  -0.269165 |   -0.196651 |    -0.072603 |  -0.087322 |   0.175083 |   -0.018014 |
      |  3 |            3 | 2.20594 |  0.267791 |   0.274395 |   0.060605 |    0.186534 |     0.19789  |   0.795274 |  -0.068745 |    0.233425 |
      |  4 |            4 | 2.20594 |  0.385789 |  -0.096769 |   0.136573 |    0.013672 |    -0.017059 |  -0.200956 |   0.158231 |    0.097842 |
      |  5 |            5 | 2.20594 | -0.425934 |  -0.014822 |  -0.069687 |   -0.017853 |     0.002987 |   0.067157 |   0.286918 |    0.305376 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.056342 |   0.048056 |   0.030273 |    0.032127 |     0.043177 |   0.031018 |   0.073158 |    0.046049 |
      |  2 |            2 |      0 | 0.08576  |   0.0946   |   0.050546 |    0.054872 |     0.084932 |   0.071527 |   0.107534 |    0.083858 |
      |  3 |            3 |      0 | 0.111813 |   0.118664 |   0.07476  |    0.082199 |     0.111053 |   0.094991 |   0.141609 |    0.118797 |
      |  4 |            4 |      0 | 0.016864 |   0.010043 |   0.009768 |    0.010062 |     0.007359 |   0.007604 |   0.018855 |    0.01675  |
      |  5 |            5 |      0 | 0.053658 |   0.041901 |   0.02889  |    0.03158  |     0.038373 |   0.027791 |   0.06799  |    0.047652 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.880869 |  -0.056518 |  -0.021962 |   -0.041526 |    -0.016466 |  -0.416941 |  -0.05822  |   -0.025297 |
      |  2 |            2 | 2.20594 | -0.72135  |  -0.115633 |  -0.044933 |   -0.084961 |    -0.033689 |  -0.05767  |  -0.119116 |   -0.051756 |
      |  3 |            3 | 2.20594 |  0.19781  |   0.833529 |   0.104944 |    0.19843  |     0.078682 |   0.134692 |   0.278202 |    0.120879 |
      |  4 |            4 | 2.20594 | -0.148199 |   0.02458  |   0.527141 |    0.01806  |     0.007161 |   0.012259 |   0.02532  |    0.011002 |
      |  5 |            5 | 2.20594 |  0.309826 |  -0.040009 |  -0.015547 |   -0.029396 |    -0.011656 |  -0.019954 |  -0.041214 |   -0.017908 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.030492 |   0.026591 |   0.046884 |    0.031505 |     0.045314 |   0.036158 |   0.021513 |    0.035692 |
      |  2 |            2 |      0 | 0.062386 |   0.054404 |   0.095922 |    0.064458 |     0.092711 |   0.073978 |   0.044015 |    0.073025 |
      |  3 |            3 |      0 | 0.145706 |   0.127065 |   0.224032 |    0.150545 |     0.216531 |   0.172781 |   0.102799 |    0.170555 |
      |  4 |            4 |      0 | 0.013261 |   0.011564 |   0.02039  |    0.013702 |     0.019707 |   0.015725 |   0.009356 |    0.015523 |
      |  5 |            5 |      0 | 0.021585 |   0.018824 |   0.033189 |    0.022302 |     0.032078 |   0.025596 |   0.015229 |    0.025267 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_xgb_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.675157 |   0.062133 |  -0.093517 |    0.12961  |    -0.040851 |  -0.289735 |  -0.56985  |   -0.222993 |
      |  2 |            2 | 2.20594 | -0.526706 |   0.009479 |  -0.47606  |   -0.204358 |     0.018729 |   0.157345 |  -0.213318 |   -0.022373 |
      |  3 |            3 | 2.20594 |  0.509772 |   0.700983 |   0.035686 |   -0.251212 |     0.071497 |   1.1158   |   0.109486 |    0.423542 |
      |  4 |            4 | 2.20594 |  0.378471 |  -0.074383 |  -0.032628 |    0.133872 |    -0.153245 |  -0.235451 |   0.072893 |    0.198188 |
      |  5 |            5 | 2.20594 | -0.445985 |  -0.110396 |  -0.118909 |    0.179782 |     0.134424 |  -0.038472 |   0.054174 |    0.334684 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013734 |   0.013929 |   0.015019 |    0.014788 |     0.014741 |   0.012818 |   0.012684 |    0.011095 |
      |  2 |            2 |      0 | 0.027093 |   0.029839 |   0.030045 |    0.023152 |     0.02609  |   0.021606 |   0.026735 |    0.030893 |
      |  3 |            3 |      0 | 0.021818 |   0.021139 |   0.024659 |    0.02106  |     0.023295 |   0.01747  |   0.022725 |    0.020437 |
      |  4 |            4 |      0 | 0.010932 |   0.009347 |   0.010853 |    0.009596 |     0.009709 |   0.010285 |   0.010187 |    0.010703 |
      |  5 |            5 |      0 | 0.021477 |   0.021301 |   0.026117 |    0.020262 |     0.021347 |   0.020693 |   0.024354 |    0.021641 |
    ''',
  })
# ---
